# MediBot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/: config.py
backend/services/: build_index.py  chat_history.py  cli.py  media_handler.py  prompts.py  rag_pipeline.py
frontend/: index.html  login.html
