[project]
name = "medibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=0.36.1",
    "langchain==1.2.8",
    "langchain-community==0.4.1",
    "langchain-core==1.2.8",
    "langchain-experimental==0.4.1",
    "langchain-groq==1.1.2",
    "langchain-huggingface==1.2.0",
    "langchain-text-splitters==1.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
    "sentence-transformers>=5.2.2",
    "sounddevice>=0.5.5",
    "sqlalchemy>=2.0.49",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
