[project]
name = "medibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.3.0",
    "faiss-cpu>=1.9.0",
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "huggingface-hub>=0.27.0",
    "langchain==0.3.25",
    "langchain-community==0.3.24",
    "langchain-core==0.3.60",
    "langchain-experimental==0.3.4",
    "langchain-groq==0.3.2",
    "langchain-huggingface==0.1.2",
    "langchain-text-splitters==0.3.8",
    "pydantic>=2.10.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "scipy>=1.14.0",
    "sentence-transformers>=3.4.1",
    "sounddevice>=0.5.1",
    "sqlalchemy>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.47.0",
    "uvicorn[standard]>=0.34.0",
]
